-- Using Stackage snapshot: http://www.stackage.org/stackage/46bb2d7487546939e22612e7d757f1df5a5163e9
name:              lambdaweb
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Litchard
synopsis:          lambdfan.com Web Site
description:       used to be yesodweb, now it's lambdaweb
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodweb.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

executable         lambdaweb
    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                PatternGuards
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2
                 , yesod-core                    >= 1.2
                 , yesod-auth                    >= 1.2
                 , yesod-static                  >= 1.2
                 , yesod-form                    >= 1.2
                 , yesod-newsfeed                >= 1.2
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , template-haskell
                 , shakespeare
                 , hjsmin                        >= 0.0.14
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 2.0
                 , yaml                          >= 0.8
                 , blaze-html                    >= 0.7
                 , conduit                       >= 0.5.2.1
                 , conduit-extra
                 , resourcet                     >= 0.3
                 , xss-sanitize                  >= 0.3.1
                 , system-filepath               >= 0.4.4
                 , system-fileio                 >= 0.3
                 , attoparsec                    >= 0.10
                 , data-default
                 , xml-conduit                   >= 1.0
                 , time
                 , http-types                    >= 0.7
                 , containers
                 , simple-sendfile               >= 0.2.1
                 , unix
                 , transformers
                 , old-locale
                 , process
                 , pureMD5
                 , wai-app-static
                 , markdown
                 , html-conduit
                 , classy-prelude

    other-modules: Application
                 , Blog
                 , Foundation
                 , Handler.Blog
                 , Handler.Page
                 , Handler.Root
                 , Handler.Wiki
                 , Import
                 , Import.Content
                 , Settings
                 , Settings.StaticFiles
                 
